infra/kubernetes/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledsproj
  namespace: leds
  labels:
    run: ledsproj
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: ledsproj
