infra/kubernetes/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: leds
  labels:
    run: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    run: postgres
